# wisevoter

./: .gitignore  .rbversion  5169523.psd  CNAME  Gemfile  LICENSE  README.md  Rakefile  Vagrantfile  _config.yml  about.html  articles.html  builddev.sh  constituencies.html  data.html  docker-compose.yml  index.html  issues.html  links.jsonp  maps.html  params.json  parties.html  politicians.html  search.json  sitemap.xml
_includes/: analytics-google.html  head.html  navigation.html
_layouts/: index.html  politician.html
_posts/: 2012-09-09-RahulGandhi.md  2013-08-09-a-harinath-reddy.md  2013-08-09-ajay-rai.md  2013-08-09-ajay-tamta.md  2013-08-09-amita-bajpai.md  2013-08-09-ananth-kumar.md  2013-08-09-ashok-nete.md  2013-08-09-asim-bala.md  2013-08-09-b-y-raghavendra.md  2013-08-09-bacchi-singh-rawat.md  2013-08-09-badkunwar-gagrai.md  2013-08-09-bal-singh.md  2013-08-09-balkumar-patel.md  2013-08-09-balram-singh-yadav.md  2013-08-09-balubhai-shukl.md  2013-08-09-bandaru-dattatraya.md  2013-08-09-banwarilal-purohit.md  2013-08-09-basudeb-acharya.md  2013-08-09-battuala-rosaiah.md  2013-08-09-bhabendra-nath-barman.md  2013-08-09-bhavsinh-rathor.md  2013-08-09-bhola-pande.md  2013-08-09-bidyut-kumar-haldar.md  2013-08-09-bijoya-chakraborty.md  2013-08-09-bratin-sengupxa.md  2013-08-09-brijbhushan-sharan-singh.md  2013-08-09-chandrabhan-singh.md  2013-08-09-chandramani-tripathy.md  2013-08-09-chunilal-chakravarti.md  2013-08-09-deepak-bhardwaj.md  (+96 more)
data/2024/: candidates.db  getadrdata.py  getwebsite.py  pyproject.toml
data/2024/constituencies/: add-constituencies.py
(+26710 files in other folders)
