[tool.poetry]
name = "adrdata-crawler"
version = "0.1.0"
description = ""
authors = ["Vaibhav Bhandari <vaibhavb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
selenium = "^4.1.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
